# calvr_plugins

./: .gitignore  CMakeLists.txt
calit2/: CMakeLists.txt
satre/: CMakeLists.txt  config.xml
satre/Star-Forge/: AttractorVorton.cpp  AttractorVorton.hpp  CMakeLists.txt  OSGPlanet.cpp  OSGPlanet.hpp  Planet.hpp  RepulsorVorton.cpp  RepulsorVorton.hpp  SFObject.cpp  SFObject.hpp  SphereTangentShooter.cpp  SphereTangentShooter.hpp  StarForge.cpp  StarForge.hpp  StarForgePlugin.cpp  StarForgePlugin.hpp  UniverseObject.cpp  UniverseObject.hpp  Vorton.hpp  math_helper.hpp
satre/StarForge/: AttractorVorton.hpp  CMakeLists.txt  GlobalParameters.hpp  OSGPlanet.cpp  OSGPlanet.hpp  Planet.cpp  PositionCorrectionOperator.hpp  RepulsorVorton.cpp  RepulsorVorton.hpp  SkyBox.cpp  SkyBox.hpp  SoundSourceUpdateCallback.hpp  SpherePlacer.hpp  SphereTangentShooter.cpp  StarForge.cpp  StarForge.hpp  Tracer.hpp  UniverseObject.cpp  UniverseObject.hpp  Vorton.hpp  math_helper.hpp
satre/StarForge/shaders/: particleDebug.frag  particleDebug.vert  skybox.frag  skybox.vert  starforge.frag  starforge.vert  starforge_phase1.frag  starforge_phase2.frag  starforge_phase3.frag  starforge_phase3.vert
